samples/_failures_safe/1761272355_f90514_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_843f62d3.c: In function ‘main’:
./samples/SAFE/__tmp_843f62d3.c:159:5: error: expected declaration or statement at end of input
  159 |     }
      |     ^
